--- a/index.html
+++ b/index.html
@@ -954,7 +954,7 @@ function cancelEditSignature() {
 ></textarea>
 
     <div id="signatureButtons" style="display:flex; justify-content:space-between; margin-top:1em; gap:0.5em;">
-      <button id="removeSignatureBtn" onclick="removeSignature()" style="flex:1; background:#dc3545; color:white; border:none; padding:0.6em; border-radius:6px;">❌ Remove</button>
+      <button id="removeSignatureBtn" onclick="removeSignature()" style="flex:1; background:#dc3545; color:white; border:none; padding:0.6em; border-radius:6px;">🧹 Clear All</button>
       <button onclick="closeSignatureModal(true)" style="flex:1; background:#28a745; color:white; border:none; padding:0.6em; border-radius:6px;">✅ Accept</button>
     </div>
 
