--- a/index.html
+++ b/index.html
@@ -336,22 +336,21 @@ input[readonly] {
 
 <pre id="output" style="white-space: pre-wrap; padding: 1em; border: 1px solid #ccc; border-radius: 6px; font-size: 1em; margin-bottom: 0.3em; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 ">
-✨ <b>How to Use the Itinerary Builder </b>
+✨ Quick Guide: Itinerary Builder
+	1. Enter tour name and select start/end dates (1–30 days).
+<i>  First day opens automatically. </i>
+	2. (Optional) Add a custom title next to the date.
+	3. Tap ”+ Add Activity” to select or type site names.
+<i>  Tap Accept Selection when done. </i>
+	4. Tap “Next Day” to continue.
+<i>  Repeat steps 2–3 for each day. </i>
+	5. (Optional) Tap Signature to add a closing message.
+<i>  Saved for future use. </i>
+	6. Tap “Summarize” to generate itinerary.
+<i>  Manual edits allowed; tap again to refresh. </i>
+	7. Tap “Share or Save Itinerary” to send or export.
 
-1. Enter the tour name.
-2. Select a start and end date (1–30 days range).
-<i>- The first day window will open</i>
-3. Optional: keep or add a title next to the date
-4. Tap "+ Add Activity" to choose or type site names.
-<i>- Selection window will open, when finished tap Accept Selection to return</i>
-5. Tap "Next Day" to continue adding days.
-<i>- Repeat same procedure as Day 1</i>
-6. When done, tap "Summarize" to display final itinerary.
-<i>- It is possible to manually edit or add activities in any day, just press Summarize again to reflect the changes.</i>
-7. Tap "Share or Save Itinerary" to send it to Notes, WhatsApp, email, or other apps.
-
-
-⚠️ <b> Note: Any change to the start or end dates will reset all activities.</b>
+⚠️ Note: Changing dates will erase all activities.
 </pre>
 
 <div style="text-align: center; margin-top: 1em;">
