--- a/index.html
+++ b/index.html
@@ -336,21 +336,23 @@ input[readonly] {
 
 <pre id="output" style="white-space: pre-wrap; padding: 1em; border: 1px solid #ccc; border-radius: 6px; font-size: 1em; margin-bottom: 0.3em; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 ">
-✨ Quick Guide: Itinerary Builder
-	1. Enter tour name and select start/end dates (1–30 days).
+✨ <b>Quick Guide: Itinerary Builder</b> ✨
+
+1. Enter tour name and select start/end dates (1–30 days).
 <i>  First day opens automatically. </i>
-	2. (Optional) Add a custom title next to the date.
-	3. Tap ”+ Add Activity” to select or type site names.
+2. (Optional) Add a custom title next to the date.
+3. Tap ”+ Add Activity” to select or type site names.
 <i>  Tap Accept Selection when done. </i>
-	4. Tap “Next Day” to continue.
+4. Tap “Next Day” to continue.
 <i>  Repeat steps 2–3 for each day. </i>
-	5. (Optional) Tap Signature to add a closing message.
+5. (Optional) Tap Signature to add a closing message.
 <i>  Saved for future use. </i>
-	6. Tap “Summarize” to generate itinerary.
-<i>  Manual edits allowed; tap again to refresh. </i>
-	7. Tap “Share or Save Itinerary” to send or export.
+6. Tap “Summarize” to generate itinerary.
+<i>  Manual edits allowed</i>
+7. Tap “Share or Save Itinerary” to send or export.
 
 ⚠️ Note: Changing dates will erase all activities.
+
 </pre>
 
 <div style="text-align: center; margin-top: 1em;">
