--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
       margin: 0;
     }
 
-    /* ... rest of your CSS exactly as you pasted ... */
   </style>
 </head>
 
@@ -159,7 +158,7 @@ input[readonly] {
 
     pre {
       white-space: pre-wrap;
-      background: #faffbd !important;
+      background: #f4faff !important;
       padding: 1em;
       border-radius: 8px;
       margin-top: 1em;
